@@ -8,7 +8,7 @@ Description: An interface to the fast-access storage format for VCF
 Author: Stephanie M. Gogarten, Xiuwen Zheng, Adrienne Stilp
 Maintainer: Stephanie M. Gogarten <sdmorris@uw.edu>, Xiuwen Zheng <zhengx@uw.edu>, Adrienne Stilp <amstilp@uw.edu>
 Depends: SeqArray (>= 1.11.17)
-Imports: grDevices, graphics, stats, methods, gdsfmt, GenomicRanges, IRanges, S4Vectors, GWASExactHW, Biobase, logistf
+Imports: grDevices, graphics, stats, methods, gdsfmt, GenomicRanges, IRanges, S4Vectors, GWASExactHW, Biobase, logistf, dplyr, tidyr
 Suggests: BiocGenerics, BiocStyle, RUnit, stringr
 License: GPL-3
 LazyData: yes
