@@ -13,6 +13,8 @@ import(GenomicRanges)
 import(Biobase)
 import(logistf)
 importFrom(GWASExactHW, HWExact)
+importFrom(dplyr, group_by_, mutate_)
+importFrom(tidyr, separate_rows_)
 
 exportClasses(SeqVarData,
               SeqVarBlockIterator,
@@ -41,6 +43,8 @@ exportMethods(sampleData, "sampleData<-",
               altDosage,
               alleleDosage,
               expandedAltDosage,
+              expandedVariantIndex,
+              variantInfo,
               getVariableLengthData,
               titv,
               alleleFrequency,
