@@ -54,6 +54,14 @@ setGeneric("expandedAltDosage",
            function(gdsobj, ...)
              standardGeneric("expandedAltDosage"))
 
+setGeneric("expandedVariantIndex",
+           function(gdsobj, ...)
+             standardGeneric("expandedVariantIndex"))
+
+setGeneric("variantInfo",
+           function(gdsobj, ...)
+             standardGeneric("variantInfo"))
+
 setGeneric("getVariableLengthData",
            function(gdsobj, var.name, ...)
              standardGeneric("getVariableLengthData"))
